--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: xavier <xavier@student.42.fr>              +#+  +:+       +#+         #
+#    By: xalbizu- <xalbizu-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/09 13:33:34 by xalbizu-          #+#    #+#              #
-#    Updated: 2023/04/17 01:59:22 by xavier           ###   ########.fr        #
+#    Updated: 2023/04/18 16:25:48 by xalbizu-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
